# card_lib

./: README.md  pyproject.toml
src/card.egg-info/: PKG-INFO  SOURCES.txt
src/standard_playing_card/: card.py
src/standard_playing_card.egg-info/: PKG-INFO
