[project]
name = "card"
version = "0.0.3"
authors = [
  { name="Peter Dang", email="peterhdangg@gmail.com" },
]
description = "A package for creating playing cards"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"